Search results test

--- a/test-output/index.html
+++ b/test-output/index.html
@@ -102,7 +102,7 @@
                     <div class="method-list-content passed suite-Default_Suite">
                       <span>
                         <img width="3%" src="passed.png"/>
-                        <a href="#" class="method navigator-link" panel-name="suite-Default_Suite" title="com.tm.user.info.RegisterUserTest" hash-for-method="registerUser([TestCaseId=1|TestTitle=registerUser], com.tm.user.info.User@ea1a8d5)">registerUser([TestCaseId=1|TestTitle=registerUser], com.tm.user.info.User@ea1a8d5)</a> <!-- method navigator-link -->
+                        <a href="#" class="method navigator-link" panel-name="suite-Default_Suite" title="com.tm.user.info.RegisterUserTest" hash-for-method="registerUser([TestCaseId=1|TestTitle=registerUser], com.tm.user.info.User@51c8530f)">registerUser([TestCaseId=1|TestTitle=registerUser], com.tm.user.info.User@51c8530f)</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                     </div> <!-- method-list-content passed suite-Default_Suite -->
@@ -125,10 +125,10 @@
             <div class="main-panel-content rounded-window-bottom">
               <div class="method">
                 <div class="method-content">
-                  <a name="registerUser([TestCaseId=1|TestTitle=registerUser], com.tm.user.info.User@ea1a8d5)">
-                  </a> <!-- registerUser([TestCaseId=1|TestTitle=registerUser], com.tm.user.info.User@ea1a8d5) -->
+                  <a name="registerUser([TestCaseId=1|TestTitle=registerUser], com.tm.user.info.User@51c8530f)">
+                  </a> <!-- registerUser([TestCaseId=1|TestTitle=registerUser], com.tm.user.info.User@51c8530f) -->
                   <span class="method-name">registerUser</span>
-                  <span class="parameters">([TestCaseId=1|TestTitle=registerUser], com.tm.user.info.User@ea1a8d5)</span>
+                  <span class="parameters">([TestCaseId=1|TestTitle=registerUser], com.tm.user.info.User@51c8530f)</span>
                 </div> <!-- method-content -->
               </div> <!-- method -->
             </div> <!-- main-panel-content rounded-window-bottom -->
@@ -201,12 +201,12 @@ data.addRows(1);
 data.setCell(0, 0, 0)
 data.setCell(0, 1, 'registerUser')
 data.setCell(0, 2, 'com.tm.user.info.RegisterUserTest')
-data.setCell(0, 3, 41376);
+data.setCell(0, 3, 103141);
 window.suiteTableData['Default_Suite']= { tableData: data, tableDiv: 'times-div-Default_Suite'}
 return data;
 }
               </script>
-              <span class="suite-total-time">Total running time: 41 seconds</span>
+              <span class="suite-total-time">Total running time: 1 minutes</span>
               <div id="times-div-Default_Suite">
               </div> <!-- times-div-Default_Suite -->
             </div> <!-- times-div -->
@@ -221,9 +221,16 @@ return data;
         </div> <!-- panel -->
         <div panel-name="ignored-methods-Default_Suite" class="panel">
           <div class="main-panel-header rounded-window-top">
-            <span class="header-content">0 ignored methods</span>
+            <span class="header-content">1 ignored method</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
+            <div class="ignored-class-div">
+              <span class="ignored-class-name">com.tm.user.info.RegisterUserTest</span>
+              <div class="ignored-methods-div">
+                <span class="ignored-method-name">searchParts</span>
+                <br/>
+              </div> <!-- ignored-methods-div -->
+            </div> <!-- ignored-class-div -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
         <div panel-name="chronological-Default_Suite" class="panel">
@@ -234,7 +241,7 @@ return data;
             <div class="chronological-class">
               <div class="chronological-class-name">com.tm.user.info.RegisterUserTest</div> <!-- chronological-class-name -->
               <div class="test-method">
-                <span class="method-name">registerUser([TestCaseId=1|TestTitle=registerUser], com.tm.user.info.User@ea1a8d5)</span>
+                <span class="method-name">registerUser([TestCaseId=1|TestTitle=registerUser], com.tm.user.info.User@51c8530f)</span>
                 <span class="method-start">0 ms</span>
               </div> <!-- test-method -->
           </div> <!-- main-panel-content rounded-window-bottom -->
