--- a/test-output/old/Default Suite/classes.html
+++ b/test-output/old/Default Suite/classes.html
@@ -15,6 +15,11 @@
 <td>registerUser </td>
 </tr>
 <tr>
+<td>&nbsp;</td>
+<td>searchParts</td>
+<td>searchParts </td>
+</tr>
+<tr>
 <td align='center' colspan='3'>@BeforeClass</td>
 </tr>
 <tr>
