Adding Partial search and upload file test

--- a/test-output/Default Suite/user-input.html
+++ b/test-output/Default Suite/user-input.html
@@ -75,10 +75,10 @@ function toggleAllBoxes() {
 <td><b>Instance</b></td>
 </tr>
 <tr>
-<td title='com.tm.user.info.RegisterUserTest.registerUser()'><b>registerUser</b><br>Test class: com.tm.user.info.RegisterUserTest<br>Parameters: [TestCaseId=1|TestTitle=registerUser], com.tm.user.info.User@51c8530f</td>
+<td title='com.tm.user.info.CustomerWebCenterTest.registerUser()'><b>registerUser</b><br>Test class: com.tm.user.info.CustomerWebCenterTest<br>Parameters: [TestCaseId=1|TestTitle=registerUser], com.tm.user.info.User@51c8530f</td>
 <td></td>
 <td>103</td>
-<td>com.tm.user.info.RegisterUserTest@27a8c74e</td></tr>
+<td>com.tm.user.info.CustomerWebCenterTest@27a8c74e</td></tr>
 </table><p>
 </body>
 </html>
