--- a/test-output/emailable-report.html
+++ b/test-output/emailable-report.html
@@ -11,8 +11,8 @@
 <tr><th colspan="7">Default Suite</th></tr>
 <tr><td><a href="#t0">user-input</a></td><td class="num">1</td><td class="num">0</td><td class="num">0</td><td class="num">103,187</td><td></td><td></td></tr>
 </table>
-<table id='summary'><thead><tr><th>Class</th><th>Method</th><th>Start</th><th>Time (ms)</th></tr></thead><tbody><tr><th colspan="4">Default Suite</th></tr></tbody><tbody id="t0"><tr><th colspan="4">user-input &#8212; passed</th></tr><tr class="passedeven"><td rowspan="1">com.tm.user.info.RegisterUserTest</td><td><a href="#m0">registerUser</a></td><td rowspan="1">1563612314935</td><td rowspan="1">103141</td></tr></tbody>
+<table id='summary'><thead><tr><th>Class</th><th>Method</th><th>Start</th><th>Time (ms)</th></tr></thead><tbody><tr><th colspan="4">Default Suite</th></tr></tbody><tbody id="t0"><tr><th colspan="4">user-input &#8212; passed</th></tr><tr class="passedeven"><td rowspan="1">com.tm.user.info.CustomerWebCenterTest</td><td><a href="#m0">registerUser</a></td><td rowspan="1">1563612314935</td><td rowspan="1">103141</td></tr></tbody>
 </table>
-<h2>user-input</h2><h3 id="m0">com.tm.user.info.RegisterUserTest#registerUser</h3><table class="result"><tr class="param"><th>Parameter #1</th><th>Parameter #2</th></tr><tr class="param stripe"><td>[TestCaseId=1|TestTitle=registerUser]</td><td>com.tm.user.info.User@51c8530f</td></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h2>user-input</h2><h3 id="m0">com.tm.user.info.CustomerWebCenterTest#registerUser</h3><table class="result"><tr class="param"><th>Parameter #1</th><th>Parameter #2</th></tr><tr class="param stripe"><td>[TestCaseId=1|TestTitle=registerUser]</td><td>com.tm.user.info.User@51c8530f</td></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
 </body>
 </html>
