--- a/test-output/index.html
+++ b/test-output/index.html
@@ -102,7 +102,7 @@
                     <div class="method-list-content passed suite-Default_Suite">
                       <span>
                         <img width="3%" src="passed.png"/>
-                        <a href="#" class="method navigator-link" panel-name="suite-Default_Suite" title="com.tm.user.info.RegisterUserTest" hash-for-method="registerUser([TestCaseId=1|TestTitle=registerUser], com.tm.user.info.User@51c8530f)">registerUser([TestCaseId=1|TestTitle=registerUser], com.tm.user.info.User@51c8530f)</a> <!-- method navigator-link -->
+                        <a href="#" class="method navigator-link" panel-name="suite-Default_Suite" title="com.tm.user.info.CustomerWebCenterTest" hash-for-method="registerUser([TestCaseId=1|TestTitle=registerUser], com.tm.user.info.User@51c8530f)">registerUser([TestCaseId=1|TestTitle=registerUser], com.tm.user.info.User@51c8530f)</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                     </div> <!-- method-list-content passed suite-Default_Suite -->
@@ -120,7 +120,7 @@
           <div class="suite-Default_Suite-class-passed">
             <div class="main-panel-header rounded-window-top">
               <img src="passed.png"/>
-              <span class="class-name">com.tm.user.info.RegisterUserTest</span>
+              <span class="class-name">com.tm.user.info.CustomerWebCenterTest</span>
             </div> <!-- main-panel-header rounded-window-top -->
             <div class="main-panel-content rounded-window-bottom">
               <div class="method">
@@ -145,11 +145,11 @@
 &lt;suite guice-stage=&quot;DEVELOPMENT&quot; name=&quot;Default Suite&quot;&gt;
   &lt;test thread-count=&quot;5&quot; name=&quot;user-input&quot;&gt;
     &lt;classes&gt;
-      &lt;class name=&quot;com.tm.user.info.RegisterUserTest&quot;&gt;
+      &lt;class name=&quot;com.tm.user.info.CustomerWebCenterTest&quot;&gt;
         &lt;methods&gt;
           &lt;include name=&quot;registerUser&quot;/&gt;
         &lt;/methods&gt;
-      &lt;/class&gt; &lt;!-- com.tm.user.info.RegisterUserTest --&gt;
+      &lt;/class&gt; &lt;!-- com.tm.user.info.CustomerWebCenterTest --&gt;
     &lt;/classes&gt;
   &lt;/test&gt; &lt;!-- user-input --&gt;
 &lt;/suite&gt; &lt;!-- Default Suite --&gt;
@@ -200,7 +200,7 @@ data.addColumn('number', 'Time (ms)');
 data.addRows(1);
 data.setCell(0, 0, 0)
 data.setCell(0, 1, 'registerUser')
-data.setCell(0, 2, 'com.tm.user.info.RegisterUserTest')
+data.setCell(0, 2, 'com.tm.user.info.CustomerWebCenterTest')
 data.setCell(0, 3, 103141);
 window.suiteTableData['Default_Suite']= { tableData: data, tableDiv: 'times-div-Default_Suite'}
 return data;
@@ -225,7 +225,7 @@ return data;
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <div class="ignored-class-div">
-              <span class="ignored-class-name">com.tm.user.info.RegisterUserTest</span>
+              <span class="ignored-class-name">com.tm.user.info.CustomerWebCenterTest</span>
               <div class="ignored-methods-div">
                 <span class="ignored-method-name">searchParts</span>
                 <br/>
@@ -239,7 +239,7 @@ return data;
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <div class="chronological-class">
-              <div class="chronological-class-name">com.tm.user.info.RegisterUserTest</div> <!-- chronological-class-name -->
+              <div class="chronological-class-name">com.tm.user.info.CustomerWebCenterTest</div> <!-- chronological-class-name -->
               <div class="test-method">
                 <span class="method-name">registerUser([TestCaseId=1|TestTitle=registerUser], com.tm.user.info.User@51c8530f)</span>
                 <span class="method-start">0 ms</span>
