--- a/test-output/old/Default Suite/methods-not-run.html
+++ b/test-output/old/Default Suite/methods-not-run.html
@@ -1,3 +1,3 @@
 <h2>Methods that were not run</h2><table>
-<tr><td>com.tm.user.info.RegisterUserTest.searchParts</td></tr>
+<tr><td>com.tm.user.info.CustomerWebCenterTest.searchParts</td></tr>
 </table>
